--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
         <input class="controles" type="text" id="username" name="username" placeholder="Usuario">
         <input class="controles" type="password" id="password" name="password" placeholder="Contraseña">
         <select class="controles" id="control" name="control">
-            <option value="Publisher">Publisher</option>
-            <option value="Subscriber">Subscriber</option>
+            <option value="publisher">Publisher</option>
+            <option value="subscriber">Subscriber</option>
         </select>
         <input class="botones" type="submit" id="submit" value="Ingresar" />
     </form>
