--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 </head>
 <body>
-    <h!>PUBLISHER</h1>
+    <h1>PUBLISHER</h1>
     <div id="error" class="hidden" style="color: black;"></div>
     <form id="Publicar">
         <input type="text" id="mensaje" name="mensaje" placeholder="mensaje">
